--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,12 @@ button {
   background-color: bisque;
 }
 
+.load-more {
+  display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
